--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Bitter&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Bitter:wght@500&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Mate+SC&display=swap" rel="stylesheet">
   <title>Static Layout</title>
 </head>
 
@@ -29,13 +31,13 @@
       <div class="navigation">
         <nav class="nav-bar">
           <ul>
-            <li><a href="http://" target="_blank">News & Features</a></li>
+            <li><a href="http://" target="_blank">News & Features</a> <i class="arrow down"></i></li>
             <li><a href="http://" target="_blank">Quizzes</a></li>
             <li><a href="http://" target="_blank">J.K. Rowling Archive</a></li>
-            <li><a href="http://" target="_blank">Discover</a></li>
+            <li><a href="http://" target="_blank">Discover</a><i class="arrow down"></i></li>
             <li><a href="http://" target="_blank">20 Years of Movie Magic</a></li>
             <li><a href="http://" target="_blank">Hogwarts Sorting</a></li>
-            <li><a href="http://" target="_blank">Pins</a></li>
+            <li><a href="http://" target="_blank">Pins</a><i class="arrow down"></i></li>
             <li><a href="http://" target="_blank">Shop</a></li>
           </ul>
         </nav>
@@ -59,7 +61,7 @@
       </div>
 
       <!-- Shape- -->
-      <div class="rectangleshape">
+      <div>
         <img
           src="./assets/kisspng-rhombus-shape-diamond-parallelogram-clip-art-parallelogram-free-material-high-definition-map-5aa8b7e992eca0.7469608815210065696018.png"
           id="diamond" alt="">
